# matsprak-2022

./: .gitignore  CMakeLists.txt  README.md
comparisons/: 1-variables.cpp  2-structs.cpp  3-strings.cpp  4-functions.cpp  Makefile
demo/: 1-basic.msk  1-import.msk  1-std.msk  2-vars.msk  3-struct.msk  x-game.msk
src/: errors.h  file.h  log.h  main.cpp  module.h  parse.cpp  parse.h  rootblock.h  state.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
src/ast/: function.h  module.h  workspace.h
src/codegen/cpp/: codegencpp.cpp  codegencpp.h
src/codegen/il/: codegenil.cpp  codegenil.h  codegenir.cpp  codegenir.h
src/parse/: function.h  module.cpp  module.h  parsefunction.h  parsemodule.cpp  parsemodule.h  state.cpp  state.h  utils.h
